# tetris-gif-generator

./: .gitignore  README.md  in.txt  pyproject.toml
src/tetris_gif_generator/: __init__.py  config.py
